# ADBFiles

./: PKGBUILD  package.json  tsconfig.app.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/commands/: adb.rs  file.rs  utils.rs
src/lib/: icons.ts  types.ts
src/lib/components/: AdbPane.svelte  DesktopPane.svelte  DropdownMenu.svelte  FileDropper.svelte  FileList.svelte  Footer.svelte  Header.svelte  Navigation.svelte  PartitionMenu.svelte  VirtualList.svelte
src/lib/stores/: fileManager.svelte.ts
src/lib/utils/: icons.ts  pathUtils.ts
