[package]
name = "adbfiles"
version = "0.0.1"
description = "Dead simple Android file explorer using ADB"
authors = ["NullCode1337"]
license = "MIT"
repository = "NullCode1337/ADBFiles"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "adbfiles_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2.8.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["time", "process"] }
adb_client = { version = "*", features = ["usb"] }
sysinfo = "0.36.1"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
